# Canfigger ChangeLog

2024-02-25

  * canfigger_free() replaced with canfigger_free_current_key_node_advance()
  * canfigger_free_attr() removed
  * use 'canfigger_free_current_attr_str_advance()' instead of
    'list->attr_node = list->attr_node->next'
  * canfigger_attr points to the current attribute, or NULL if there is none
  * In meson.build, rename dep_canfigger->canfigger_dep

2024-02-21

  * Use dynamic memory allocation for keys, values, and attributes.

2022-01-06

  * implement support for multiple attributes (breaking change)
  * release v0.2.0

2021-12-27

  * release v0.1.2

2021-12-26

  * Code maintenance/refactor
  * Minor adjustments to meson.build so that canfigger can be used as a
  meson subproject

2021-06-24

  * The docs now install when 'ninja install' is run
  * canfigger v0.1.1 released

2021-06-09

  * If doing an early return due to error, the file descriptor now gets
  closed properly.

2021-06-06

  * v0.1.0 released (initial release)