@@ -35,20 +35,23 @@ main(void)
   int i = 0;
   while (list)
   {
+    char *attr = NULL;
+    canfigger_free_current_attr_str_advance(list->attributes, &attr);
+
     fprintf(stderr, "\n\
 Key: %s | Expected: %s\n\
 Value: %s | Expected: %s\n\
-Attribute: %s | Expected: %s\n", list->key, data[i].key, list->value != NULL ? list->value : "NULL", data[i].value, list->attributes != NULL ? list->attributes->current : "NULL", data[i].attribute);
+Attribute: %s | Expected: %s\n", list->key, data[i].key, list->value != NULL ? list->value : "NULL", data[i].value, attr != NULL ? attr : "NULL", data[i].attribute);
 
     assert(strcmp(data[i].key, list->key) == 0);
     assert(strcmp
            (data[i].value != NULL ? data[i].value : "NULL",
             list->value != NULL ? list->value : "NULL") == 0);
     fprintf(stderr, "attr: %s\n",
-            list->attributes != NULL ? list->attributes->current : "NULL");
+            attr != NULL ? attr : "NULL");
     assert(strcmp
-           (data[i].attribute != NULL ? data[i].attribute : "NULL",
-            list->attributes != NULL ? list->attributes->current : "NULL") == 0);
+           (attr != NULL ? data[i].attribute : "NULL",
+            attr != NULL ? attr : "NULL") == 0);
     i++;
 
     canfigger_free_current_key_node_advance(&list);
